--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,13 +77,15 @@ force-exclude = '''
 '''
 
 [tool.ruff]
+
+[tool.ruff.lint]
 select = [
     "E",
     "F",
-    "B", # flake8-bugbear
-    "I", # isort
-    "UP", # pyupgrade
-    "SIM", # simplify
-    "TCH", # flake8-type-checking
-    "RUF", # ruff specific rules
+    "B",
+    "I",
+    "UP",
+    "SIM",
+    "TCH",
+    "RUF",
 ]
